--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.31.0",
     "sweetalert2": "^11.7.20",
